syntax = "proto3";

package bezeichner.v1;

import "google/api/annotations.proto";

option go_package = "github.com/alexfalkowski/bezeichner/api/bezeichner/v1";
option ruby_package = "Bezeichner::V1";

// GenerateIdentifiersRequest for a specific application.
message GenerateIdentifiersRequest {
  string application = 1;
  uint64 count = 2;
}

// GenerateIdentifiersResponse for a specific application.
message GenerateIdentifiersResponse {
  repeated string ids = 1;
}

// MapIdentifiersRequest for some identifiers.
message MapIdentifiersRequest {
  repeated string ids = 1;
}

// MapIdentifiersResponse for some identifiers.
message MapIdentifiersResponse {
  repeated string ids = 1;
}

// Service allows to manage identifiers.
service Service {
  // GenerateIdentifiers for a specific application.
  rpc GenerateIdentifiers(GenerateIdentifiersRequest) returns (GenerateIdentifiersResponse) {
    option (google.api.http) = {get: "/v1/generate/{application}/{count}"};
  }

  // MapIdentifiers for some identifiers.
  rpc MapIdentifiers(MapIdentifiersRequest) returns (MapIdentifiersResponse) {
    option (google.api.http) = {get: "/v1/map/{ids}"};
  }
}
